fix: mob nav appears from bottom, hooper index, --delay vars
BREAKING CHANGE:
    - nav se nije pojavljivao od dole jer je njegov translate gazio od animacije translate, pa stavih tom od animacije !important
    - dodati --delay vars za nav i sidebar animacije
    - categories hooper iz -1 z-index vracen 700, nije se moglo ni kliktati na njih ni skrolovati zbog toga
    - dodat z-index za nav jer tooltip bio ispod hooper kategorija

TODO:
    - api keys changing da bude u loopu
    - promeniti padding-bottom 28vh iz home/smoothies/bookmarks u middle ili nesto, jer kad se skroluje skroz dole (mob) tj tih 28vh od dna i ide na neku stranicu on ne skroluje na top, vec tu skroz dole

--- a/assets/sass/abstract/_animations.scss
+++ b/assets/sass/abstract/_animations.scss
@@ -20,13 +20,14 @@
 }
 .nav {
     &-enter-active {
+        --delay: 0.2s;
         @extend %will-change;
         backface-visibility: hidden;
-        transition: transform 1s $outCirc, opacity 0.6s $outSmooth;
-        transition-delay: 0.2s;
+        transition: transform 1s $outCirc var(--delay),
+            opacity 0.6s $outSmooth var(--delay);
 
         @include device(tab-to-phoneland) {
-            transition-delay: 1.2s;
+            --delay: 1.2s;
         }
     }
     &-enter {
@@ -34,7 +35,7 @@
         transform: translate3d(-100%, 0, 0);
 
         @include device(tab-to-phoneland) {
-            transform: translate3d(-50%, 120%, 0);
+            transform: translate3d(-50%, 140%, 0) !important;
         }
     }
     &-enter-to {
@@ -48,10 +49,11 @@
 }
 .sidebar {
     &-enter-active {
+        --delay: 0.2s;
         @extend %will-change;
         backface-visibility: hidden;
-        transition: transform 1s $outCirc, opacity 0.6s $outSmooth;
-        transition-delay: 0.2s;
+        transition: transform 1s $outCirc var(--delay),
+            opacity 0.6s $outSmooth var(--delay);
 
         @include device(tab-land) {
             transition: none;
