--- a/assets/sass/abstract/_vars.scss
+++ b/assets/sass/abstract/_vars.scss
@@ -13,6 +13,7 @@
     --padding-home: 2vw;
     --padding-middle: 5vw;
     --nav-sidebar-height: calc(100vh - calc(2 * var(--padding-home)));
+    --nav-x-height: 11rem;
     --hooper-ingr-bottom: 4rem;
 
     // SIZES
