--- a/assets/sass/layouts/_middle.scss
+++ b/assets/sass/layouts/_middle.scss
@@ -3,10 +3,13 @@
 
     padding: 0 var(--padding-middle);
     @extend %w-100;
-    // overflow: visible;
 
     @include device(tab-to-phoneland) {
         --padding-middle: 0;
+
+        // padding-bottom: calc(2 * var(--nav-x-height));
+
+        // background-color: orangered;
     }
 
     .scroll-to {
