--- a/assets/sass/components/_loader.scss
+++ b/assets/sass/components/_loader.scss
@@ -4,9 +4,10 @@
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
+    // bottom: 0;
     width: 100%;
-    min-height: 100vh;
+    // min-height: 100vh;
+    height: 100vh;
     @extend %flex-center;
     background: var(--clr_grd_bg);
     transform-origin: center bottom;
