--- a/assets/sass/abstract/_vars.scss
+++ b/assets/sass/abstract/_vars.scss
@@ -1,8 +1,8 @@
 :root {
     // FONT
-    --f-family: 'Poppins', -apple-system, BlinkMacSystemFont, Arial, 'Segoe UI',
-        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-        sans-serif;
+    --f-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+        sans-serif, Arial, 'Open Sans', 'Helvetica Neue', Oxygen, Ubuntu,
+        Cantarell;
     --f-size: 1.6rem;
     --line-height: 1.8;
     --letter-spacing: 0.1px;
