--- a/assets/sass/abstract/_vars.scss
+++ b/assets/sass/abstract/_vars.scss
@@ -1,7 +1,7 @@
 :root {
     // FONT
-    --f-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-        sans-serif, Arial, 'Open Sans', 'Helvetica Neue', Oxygen, Ubuntu,
+    --f-family: 'Poppins', -apple-system, BlinkMacSystemFont, Roboto, sans-serif,
+        'Segoe UI', Arial, 'Open Sans', 'Helvetica Neue', Oxygen, Ubuntu,
         Cantarell;
     --f-size: 1.6rem;
     --line-height: 1.8;
